# peyag-con

./: .gitignore  1周期.txt  Cargo.toml  README.md  jikken3_o.txt  jikken3_o_2.txt  output17.txt  output18.txt  output19.txt  output2.txt  output3.txt  output_16.txt  仕様書.txt
.github/workflows/: build.yml  crossbuild.yml  main.yml  rust.yml
src/: api.rs  main.rs
